feat: add bactestStats schema
