# src/lib/okane-finance-api/okane-finance-api-docs.json
@@ -323,96 +323,36 @@
 			},
 			"BacktestStats": {
 				"properties": {
-					"ticker": { "anyOf": [{}, { "type": "null" }], "title": "Ticker" },
-					"max_drawdown_percentage": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Max Drawdown Percentage"
-					},
-					"start": { "anyOf": [{}, { "type": "null" }], "title": "Start" },
-					"end": { "anyOf": [{}, { "type": "null" }], "title": "End" },
-					"duration": { "anyOf": [{}, { "type": "null" }], "title": "Duration" },
-					"exposure_time_percentage": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Exposure Time Percentage"
-					},
-					"final_equity": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Final Equity"
-					},
-					"peak_equity": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Peak Equity"
-					},
-					"return_percentage": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Return Percentage"
-					},
-					"buy_and_hold_return": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Buy And Hold Return"
-					},
-					"return_annualized": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Return Annualized"
-					},
-					"volatility_annualized": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Volatility Annualized"
-					},
-					"sharpe_ratio": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Sharpe Ratio"
-					},
-					"sortino_ratio": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Sortino Ratio"
-					},
-					"calmar_ratio": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Calmar Ratio"
-					},
+					"ticker": { "title": "Ticker" },
+					"max_drawdown_percentage": { "type": "number", "title": "Max Drawdown Percentage" },
+					"start": { "title": "Start" },
+					"end": { "title": "End" },
+					"duration": { "title": "Duration" },
+					"exposure_time_percentage": { "type": "number", "title": "Exposure Time Percentage" },
+					"final_equity": { "type": "number", "title": "Final Equity" },
+					"peak_equity": { "type": "number", "title": "Peak Equity" },
+					"return_percentage": { "type": "number", "title": "Return Percentage" },
+					"buy_and_hold_return": { "type": "number", "title": "Buy And Hold Return" },
+					"return_annualized": { "type": "number", "title": "Return Annualized" },
+					"volatility_annualized": { "type": "number", "title": "Volatility Annualized" },
+					"sharpe_ratio": { "type": "number", "title": "Sharpe Ratio" },
+					"sortino_ratio": { "type": "number", "title": "Sortino Ratio" },
+					"calmar_ratio": { "type": "number", "title": "Calmar Ratio" },
 					"average_drawdown_percentage": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
+						"type": "number",
 						"title": "Average Drawdown Percentage"
 					},
-					"max_drawdown_duration": {
-						"anyOf": [{}, { "type": "null" }],
-						"title": "Max Drawdown Duration"
-					},
-					"average_drawdown_duration": {
-						"anyOf": [{}, { "type": "null" }],
-						"title": "Average Drawdown Duration"
-					},
-					"trade_count": {
-						"anyOf": [{ "type": "integer" }, { "type": "null" }],
-						"title": "Trade Count"
-					},
-					"win_rate": { "anyOf": [{ "type": "number" }, { "type": "null" }], "title": "Win Rate" },
-					"best_trade": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Best Trade"
-					},
-					"worst_trade": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Worst Trade"
-					},
-					"avg_trade": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Avg Trade"
-					},
-					"max_trade_duration": {
-						"anyOf": [{}, { "type": "null" }],
-						"title": "Max Trade Duration"
-					},
-					"average_trade_duration": {
-						"anyOf": [{}, { "type": "null" }],
-						"title": "Average Trade Duration"
-					},
-					"profit_factor": {
-						"anyOf": [{ "type": "number" }, { "type": "null" }],
-						"title": "Profit Factor"
-					},
-					"html": { "anyOf": [{}, { "type": "null" }], "title": "Html" }
+					"max_drawdown_duration": { "title": "Max Drawdown Duration" },
+					"average_drawdown_duration": { "title": "Average Drawdown Duration" },
+					"trade_count": { "type": "integer", "title": "Trade Count" },
+					"win_rate": { "type": "number", "title": "Win Rate" },
+					"best_trade": { "type": "number", "title": "Best Trade" },
+					"worst_trade": { "type": "number", "title": "Worst Trade" },
+					"avg_trade": { "type": "number", "title": "Avg Trade" },
+					"max_trade_duration": { "title": "Max Trade Duration" },
+					"average_trade_duration": { "title": "Average Trade Duration" },
+					"profit_factor": { "type": "number", "title": "Profit Factor" },
+					"html": { "title": "Html" }
 				},
 				"type": "object",
 				"required": [
